@@ -1,3 +1,6 @@
+2008-01-18 Ian Rutt
+ * Fixed precision bug in complex restart code.
+
 2008-01-17 Ian Rutt
  * Fixed build problem with restarts (added handling of complex arrays)
  * This is currently untested.
